--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head><title>Tribute Page</title>
-       <script>https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js</script>
+       
        <style>
 
         body {
@@ -124,8 +124,6 @@ border: 1px solid;
             </p>
             <h3>If you have time, you should read more about this incredible human being on his<a target="_blank" id="tribute-link" href="https://en.wikipedia.org/wiki/Vallabhbhai_Patel">Wikipedia</a>.</h3>
           </div>
+        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
         </body>
-        
-        </html>
-    </body>
 </html>
