--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ border: 1px solid;
                line-height: 1.6;
         }
          img {
-             height:70%;
+             max-width:100%;
+             height:auto;
             width: 100%;
             display: block;
         }
